[package]
name = "pqc-scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Kleckner <zkleckner@dyber.org>"]
description = "Hybrid classical-quantum cryptographic operation scheduler with dynamic algorithm selection"
license = "Apache-2.0"
repository = "https://github.com/dyber-pqc/pqc-scheduler"
documentation = "https://docs.rs/pqc-scheduler"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "scheduling", "MDP", "optimization"]
categories = ["cryptography", "algorithms"]

[lib]
name = "pqc_scheduler"
path = "src/lib.rs"

[[bin]]
name = "pqc-scheduler"
path = "src/main.rs"

[features]
default = ["software"]
software = []
fpga = []
avx2 = []
avx512 = []

[dependencies]
# Async runtime
tokio = { version = "1.35.0", features = ["full", "rt-multi-thread", "macros", "sync", "time", "signal"] }
futures = "0.3.30"
async-trait = "0.1.77"

# Cryptographic libraries
openssl = "0.10.62"
oqs = "0.9.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"

# Configuration
config = "0.14.0"
clap = { version = "4.4.18", features = ["derive", "env"] }
dotenvy = "0.15.7"

# Metrics and monitoring
prometheus = "0.13.3"
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Data structures and algorithms
ndarray = "0.15.6"
nalgebra = "0.32.3"
statrs = "0.16.0"
ordered-float = "4.2.0"
priority-queue = "1.4.0"
dashmap = "5.5.3"
parking_lot = "0.12.1"

# Networking and IPC
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tonic = "0.10.2"
prost = "0.12.3"

# Time and scheduling
chrono = { version = "0.4.33", features = ["serde"] }
cron = "0.12.0"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Utilities
uuid = { version = "1.7.0", features = ["v4", "serde"] }
base64 = "0.21.7"
hex = "0.4.3"
lazy_static = "1.4.0"
once_cell = "1.19.0"
num_cpus = "1.16.0"
crossbeam = "0.8.4"
rayon = "1.8.1"

# Optional FPGA support
# xdma = { version = "0.1.0", optional = true, path = "./xdma" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
proptest = "1.4.0"
rstest = "0.18.2"
test-case = "3.3.1"
mockall = "0.12.1"
tempfile = "3.9.0"
wiremock = "0.5.22"
fake = "2.9.2"
assert_approx_eq = "1.1.0"

[[bench]]
name = "scheduler_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = true
lto = "thin"

[profile.dev]
opt-level = 1
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
